added code for the mobile responsive

--- a/style.css
+++ b/style.css
@@ -61,3 +61,10 @@ a:hover .fa-envelope {
     background-color: white;
     color: black;
 }
+
+/* Mobile device */
+@media only screen and (max-width: 600px) {
+    .navbar {
+        display: none;
+    }
+}
