--- a/style.css
+++ b/style.css
@@ -154,14 +154,21 @@ div.gallery-box{
 
 div.gallery-photos{
     img{
-        width: 80%;
+        width: 35vw;
+        width: 100%;
         margin: 0.3rem;
+        
     }
 
     display: flex;
     flex-direction: row;
     justify-content: space-around; 
     padding: 0.8rem;
+
+    div.photos-flexbox{
+        margin-right: 10px;
+    }
+
 }
 
 div.interests-box{
@@ -235,7 +242,16 @@ div.pop-up-box{
 
 /* Mobile device */
 @media only screen and (max-width: 595px) {
-    .navbar {
+    .navbar, div.interests-box,div.pop-up-box {
         display: none;
+  }
+  aside.left{
+    width: 100%;
+  }
+  div.gallery-photos{
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    
   }
 }
